--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11"
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.15"
   }
 }
